--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -14,9 +14,10 @@ $border-color:#e0e0e0;
 $border-input: #80bdff;
 $link-color: #1890ff;
 $link-hover: #0d68bd;
-$success-ghost-text: #00875A;
-$disabled-text-color: #C1C7D0;
+$success-text: #00875A;
+$disabled-text: #C1C7D0;
 
+$label-primary-color: #253858;
 $primary: #3366ff;
 $primary-hover: #003399;
 $primary-bg: #DEEBFF;
