--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,371 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 40px;
   color: #172B4D; }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row; }
+
+.col1 {
+  flex: 0 0 8.3333333333%;
+  max-width: 8.3333333333%;
+  padding: 0 15px; }
+
+.col2 {
+  flex: 0 0 16.6666666667%;
+  max-width: 16.6666666667%;
+  padding: 0 15px; }
+
+.col3 {
+  flex: 0 0 25%;
+  max-width: 25%;
+  padding: 0 15px; }
+
+.col4 {
+  flex: 0 0 33.3333333333%;
+  max-width: 33.3333333333%;
+  padding: 0 15px; }
+
+.col5 {
+  flex: 0 0 41.6666666667%;
+  max-width: 41.6666666667%;
+  padding: 0 15px; }
+
+.col6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding: 0 15px; }
+
+.col7 {
+  flex: 0 0 58.3333333333%;
+  max-width: 58.3333333333%;
+  padding: 0 15px; }
+
+.col8 {
+  flex: 0 0 66.6666666667%;
+  max-width: 66.6666666667%;
+  padding: 0 15px; }
+
+.col9 {
+  flex: 0 0 75%;
+  max-width: 75%;
+  padding: 0 15px; }
+
+.col10 {
+  flex: 0 0 83.3333333333%;
+  max-width: 83.3333333333%;
+  padding: 0 15px; }
+
+.col11 {
+  flex: 0 0 91.6666666667%;
+  max-width: 91.6666666667%;
+  padding: 0 15px; }
+
+.col12 {
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 0 15px; }
+
+@media screen and (min-width: 320px) {
+  .col1-xs {
+    flex: 0 0 8.3333333333%;
+    max-width: 8.3333333333%;
+    padding: 0 15px; }
+
+  .col2-xs {
+    flex: 0 0 16.6666666667%;
+    max-width: 16.6666666667%;
+    padding: 0 15px; }
+
+  .col3-xs {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 0 15px; }
+
+  .col4-xs {
+    flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;
+    padding: 0 15px; }
+
+  .col5-xs {
+    flex: 0 0 41.6666666667%;
+    max-width: 41.6666666667%;
+    padding: 0 15px; }
+
+  .col6-xs {
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 0 15px; }
+
+  .col7-xs {
+    flex: 0 0 58.3333333333%;
+    max-width: 58.3333333333%;
+    padding: 0 15px; }
+
+  .col8-xs {
+    flex: 0 0 66.6666666667%;
+    max-width: 66.6666666667%;
+    padding: 0 15px; }
+
+  .col9-xs {
+    flex: 0 0 75%;
+    max-width: 75%;
+    padding: 0 15px; }
+
+  .col10-xs {
+    flex: 0 0 83.3333333333%;
+    max-width: 83.3333333333%;
+    padding: 0 15px; }
+
+  .col11-xs {
+    flex: 0 0 91.6666666667%;
+    max-width: 91.6666666667%;
+    padding: 0 15px; }
+
+  .col12-xs {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0 15px; } }
+@media screen and (min-width: 480px) {
+  .col1-sm {
+    flex: 0 0 8.3333333333%;
+    max-width: 8.3333333333%;
+    padding: 0 15px; }
+
+  .col2-sm {
+    flex: 0 0 16.6666666667%;
+    max-width: 16.6666666667%;
+    padding: 0 15px; }
+
+  .col3-sm {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 0 15px; }
+
+  .col4-sm {
+    flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;
+    padding: 0 15px; }
+
+  .col5-sm {
+    flex: 0 0 41.6666666667%;
+    max-width: 41.6666666667%;
+    padding: 0 15px; }
+
+  .col6-sm {
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 0 15px; }
+
+  .col7-sm {
+    flex: 0 0 58.3333333333%;
+    max-width: 58.3333333333%;
+    padding: 0 15px; }
+
+  .col8-sm {
+    flex: 0 0 66.6666666667%;
+    max-width: 66.6666666667%;
+    padding: 0 15px; }
+
+  .col9-sm {
+    flex: 0 0 75%;
+    max-width: 75%;
+    padding: 0 15px; }
+
+  .col10-sm {
+    flex: 0 0 83.3333333333%;
+    max-width: 83.3333333333%;
+    padding: 0 15px; }
+
+  .col11-sm {
+    flex: 0 0 91.6666666667%;
+    max-width: 91.6666666667%;
+    padding: 0 15px; }
+
+  .col12-sm {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0 15px; } }
+@media screen and (min-width: 768px) {
+  .col1-md {
+    flex: 0 0 8.3333333333%;
+    max-width: 8.3333333333%;
+    padding: 0 15px; }
+
+  .col2-md {
+    flex: 0 0 16.6666666667%;
+    max-width: 16.6666666667%;
+    padding: 0 15px; }
+
+  .col3-md {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 0 15px; }
+
+  .col4-md {
+    flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;
+    padding: 0 15px; }
+
+  .col5-md {
+    flex: 0 0 41.6666666667%;
+    max-width: 41.6666666667%;
+    padding: 0 15px; }
+
+  .col6-md {
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 0 15px; }
+
+  .col7-md {
+    flex: 0 0 58.3333333333%;
+    max-width: 58.3333333333%;
+    padding: 0 15px; }
+
+  .col8-md {
+    flex: 0 0 66.6666666667%;
+    max-width: 66.6666666667%;
+    padding: 0 15px; }
+
+  .col9-md {
+    flex: 0 0 75%;
+    max-width: 75%;
+    padding: 0 15px; }
+
+  .col10-md {
+    flex: 0 0 83.3333333333%;
+    max-width: 83.3333333333%;
+    padding: 0 15px; }
+
+  .col11-md {
+    flex: 0 0 91.6666666667%;
+    max-width: 91.6666666667%;
+    padding: 0 15px; }
+
+  .col12-md {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0 15px; } }
+@media screen and (min-width: 992px) {
+  .col1-lg {
+    flex: 0 0 8.3333333333%;
+    max-width: 8.3333333333%;
+    padding: 0 15px; }
+
+  .col2-lg {
+    flex: 0 0 16.6666666667%;
+    max-width: 16.6666666667%;
+    padding: 0 15px; }
+
+  .col3-lg {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 0 15px; }
+
+  .col4-lg {
+    flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;
+    padding: 0 15px; }
+
+  .col5-lg {
+    flex: 0 0 41.6666666667%;
+    max-width: 41.6666666667%;
+    padding: 0 15px; }
+
+  .col6-lg {
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 0 15px; }
+
+  .col7-lg {
+    flex: 0 0 58.3333333333%;
+    max-width: 58.3333333333%;
+    padding: 0 15px; }
+
+  .col8-lg {
+    flex: 0 0 66.6666666667%;
+    max-width: 66.6666666667%;
+    padding: 0 15px; }
+
+  .col9-lg {
+    flex: 0 0 75%;
+    max-width: 75%;
+    padding: 0 15px; }
+
+  .col10-lg {
+    flex: 0 0 83.3333333333%;
+    max-width: 83.3333333333%;
+    padding: 0 15px; }
+
+  .col11-lg {
+    flex: 0 0 91.6666666667%;
+    max-width: 91.6666666667%;
+    padding: 0 15px; }
+
+  .col12-lg {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0 15px; } }
+@media screen and (min-width: 1200px) {
+  .col1-xl {
+    flex: 0 0 8.3333333333%;
+    max-width: 8.3333333333%;
+    padding: 0 15px; }
+
+  .col2-xl {
+    flex: 0 0 16.6666666667%;
+    max-width: 16.6666666667%;
+    padding: 0 15px; }
+
+  .col3-xl {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 0 15px; }
+
+  .col4-xl {
+    flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;
+    padding: 0 15px; }
+
+  .col5-xl {
+    flex: 0 0 41.6666666667%;
+    max-width: 41.6666666667%;
+    padding: 0 15px; }
+
+  .col6-xl {
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 0 15px; }
+
+  .col7-xl {
+    flex: 0 0 58.3333333333%;
+    max-width: 58.3333333333%;
+    padding: 0 15px; }
+
+  .col8-xl {
+    flex: 0 0 66.6666666667%;
+    max-width: 66.6666666667%;
+    padding: 0 15px; }
+
+  .col9-xl {
+    flex: 0 0 75%;
+    max-width: 75%;
+    padding: 0 15px; }
+
+  .col10-xl {
+    flex: 0 0 83.3333333333%;
+    max-width: 83.3333333333%;
+    padding: 0 15px; }
+
+  .col11-xl {
+    flex: 0 0 91.6666666667%;
+    max-width: 91.6666666667%;
+    padding: 0 15px; }
+
+  .col12-xl {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0 15px; } }
 .btn {
   height: 40px;
   border-radius: 3px;
@@ -35,43 +400,351 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 12px;
-  border: 0px; }
+  border: 0px;
+  cursor: pointer;
+  transition: all ease-in-out 0.1s; }
   .btn:focus {
     outline: 0px; }
   .btn.primary-btn {
     background-color: #3366ff;
     color: #fff; }
     .btn.primary-btn:hover {
-      background-color: #003399; }
+      background-color: #003399;
+      transition: all ease-in-out 0.1s; }
   .btn.primary-ghost-btn {
     background-color: #DEEBFF;
     color: #003399; }
     .btn.primary-ghost-btn:hover {
       background-color: #003399;
+      transition: all ease-in-out 0.1s;
       color: #fff; }
   .btn.success-btn {
     background-color: #36B37E;
     color: #fff; }
     .btn.success-btn:hover {
+      transition: all ease-in-out 0.1s;
       background-color: #006644; }
   .btn.success-ghost-btn {
     background-color: #E2FFEE;
     color: #00875A; }
     .btn.success-ghost-btn:hover {
       background-color: #006644;
-      color: #fff; }
+      color: #fff;
+      transition: all ease-in-out 0.1s; }
   .btn.disabled-btn {
     background-color: #EBECF0;
     color: #C1C7D0; }
+  .btn.clear-btn {
+    background-color: #fff;
+    border: 1px solid #e0e0e0;
+    color: #172B4D; }
+
+.alert {
+  height: 40px;
+  border-radius: 3px;
+  padding: 0 32px;
+  font-size: 12px;
+  line-height: 40px; }
+  .alert.primary-alert {
+    background-color: #DEEBFF;
+    color: #003399; }
+  .alert.success-alert {
+    background-color: #E2FFEE;
+    color: #00875A; }
+  .alert.error-alert {
+    background-color: #FFFAE6;
+    color: #DE350B; }
 
 .label {
   height: 16px;
   font-size: 10px;
   font-weight: bold;
   padding: 0 12px;
-  display: inline-block; }
-  .label.success-label {
+  display: inline-block;
+  font-weight: bold;
+  text-transform: uppercase; }
+  .label.primary-label {
+    background-color: #253858;
+    color: #fff; }
+  .label.secondary-label {
     background-color: #36B37E;
     color: #fff; }
+  .label.danger-label {
+    background-color: #FF5630;
+    color: #fff; }
+
+.text-card {
+  width: 250px;
+  border: 1px solid #EBECF0;
+  border-radius: 3px; }
+  .text-card .image-label {
+    height: 180px;
+    position: relative; }
+    .text-card .image-label img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      object-position: center; }
+    .text-card .image-label .label-group {
+      position: absolute;
+      left: 7px;
+      top: 0px; }
+      .text-card .image-label .label-group .label {
+        margin-right: 5px; }
+  .text-card .details {
+    padding: 10px; }
+    .text-card .details .title {
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase; }
+      .text-card .details .title span {
+        margin-right: 5px; }
+    .text-card .details .price {
+      margin: 5px 0;
+      color: #3366ff;
+      font-weight: bold;
+      font-size: 24px; }
+    .text-card .details .location {
+      font-size: 14px;
+      text-transform: uppercase; }
+      .text-card .details .location i {
+        color: #7A869A; }
+      .text-card .details .location span {
+        position: relative;
+        top: -2px;
+        margin-left: 5px; }
+  .text-card .features {
+    background-color: #EBECF0;
+    padding: 10px;
+    font-size: 12px; }
+    .text-card .features .flex {
+      display: flex; }
+      .text-card .features .flex .bed, .text-card .features .flex .bath, .text-card .features .flex .map, .text-card .features .flex .view {
+        width: 50%; }
+        .text-card .features .flex .bed img, .text-card .features .flex .bath img, .text-card .features .flex .map img, .text-card .features .flex .view img {
+          margin-right: 5px; }
+      .text-card .features .flex .bath img {
+        margin-right: 0px; }
+      .text-card .features .flex .bath span {
+        position: relative;
+        top: -10px; }
+
+.input {
+  border: 1px solid #e0e0e0;
+  height: 32px;
+  border-radius: 3px;
+  padding: 0 16px; }
+  .input:focus {
+    outline: 0px; }
+
+.textarea {
+  resize: none;
+  border: 1px solid #e0e0e0;
+  height: 40px;
+  padding: 8px 16px; }
+
+.checkbox {
+  display: inline-block;
+  margin-right: 10px; }
+  .checkbox input[type="checkbox"] {
+    display: none;
+    cursor: pointer; }
+    .checkbox input[type="checkbox"] + label {
+      cursor: pointer; }
+    .checkbox input[type="checkbox"] + label:before {
+      content: '\2714';
+      border: 1px solid #e0e0e0;
+      padding: 0 5px;
+      border-radius: 3px;
+      color: transparent;
+      margin-right: 6px; }
+    .checkbox input[type="checkbox"]:checked + label:before {
+      background-color: #3366ff;
+      color: #fff; }
+
+.radio-button {
+  margin: 16px 0;
+  display: inline-block;
+  cursor: pointer; }
+  .radio-button input {
+    display: none;
+    cursor: pointer; }
+    .radio-button input + label {
+      line-height: 20px;
+      height: 20px;
+      padding-left: 20px;
+      display: inline-block;
+      position: relative;
+      cursor: pointer; }
+      .radio-button input + label:not(:empty) {
+        padding-left: 28px;
+        margin-right: 10px; }
+      .radio-button input + label:before, .radio-button input + label:after {
+        content: '';
+        width: 20px;
+        height: 20px;
+        display: block;
+        border-radius: 50%;
+        left: 0;
+        top: 0;
+        position: absolute; }
+      .radio-button input + label:before {
+        background: #e0e0e0;
+        transition: background 0.2s ease, transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 2); }
+      .radio-button input + label:after {
+        background: #fff;
+        transform: scale(0.78);
+        transition: transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.4); }
+    .radio-button input:checked + label:before {
+      transform: scale(1.04);
+      background: #3366ff; }
+    .radio-button input:checked + label:after {
+      transform: scale(0.4);
+      transition: transform .3s ease; }
+  .radio-button:hover input + label:before {
+    transform: scale(0.92); }
+  .radio-button:hover input + label:after {
+    transform: scale(0.74); }
+  .radio-button:hover input:checked + label:after {
+    transform: scale(0.4); }
+
+.DayPickerInput input {
+  border: 1px solid #e0e0e0;
+  height: 30px;
+  border-radius: 3px;
+  padding: 0 16px; }
+  .DayPickerInput input:focus {
+    outline: 0px; }
+
+.avatar-img {
+  height: 50px;
+  width: 50px; }
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  transition: all ease-in-out 0.3s;
+  cursor: pointer; }
+  .tooltip:hover .tooltip-text {
+    visibility: visible;
+    transition: all ease-in-out 0.3s; }
+  .tooltip .tooltip-text {
+    visibility: hidden;
+    max-width: 350px;
+    width: 100%;
+    text-align: center;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 150%;
+    left: 50%;
+    margin-left: -50px; }
+    .tooltip .tooltip-text::after {
+      content: "";
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: transparent transparent black transparent; }
+    .tooltip .tooltip-text span {
+      position: relative;
+      top: -2px; }
+
+.spinner {
+  border: 4px solid #000000;
+  border-radius: 50%;
+  border-top: 4px solid transparent !important;
+  height: 20px;
+  width: 20px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite; }
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg); } }
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+.backdrop-modal {
+  display: none;
+  transition: all ease-in-out 0.3s;
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */ }
+  .backdrop-modal .modal {
+    position: relative;
+    background-color: #fff;
+    border: 1px solid #e0e0e0;
+    border-radius: 4px;
+    width: 520px;
+    margin: 0 auto; }
+    .backdrop-modal .modal .modal-header {
+      padding: 16px 24px;
+      color: rgba(0, 0, 0, 0.65);
+      background: #fff;
+      border-bottom: 1px solid #e8e8e8;
+      border-radius: 4px 4px 0 0; }
+      .backdrop-modal .modal .modal-header .close {
+        float: right;
+        right: 0px;
+        cursor: pointer;
+        padding: 10px;
+        position: absolute;
+        top: 5px; }
+        .backdrop-modal .modal .modal-header .close i {
+          font-size: 20px; }
+    .backdrop-modal .modal .modal-body {
+      padding: 24px;
+      font-size: 14px;
+      line-height: 1.5; }
+    .backdrop-modal .modal .modal-footer {
+      padding: 10px 16px;
+      text-align: right;
+      background: transparent;
+      border-top: 1px solid #e0e0e0;
+      border-radius: 0 0 4px 4px; }
+      .backdrop-modal .modal .modal-footer .clear-btn {
+        margin-right: 10px; }
+
+.list-group {
+  max-width: 400px; }
+  .list-group .list-group-item {
+    position: relative;
+    display: block;
+    padding: .75rem 1.25rem;
+    margin-bottom: -1px;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.125); }
+    .list-group .list-group-item:first-child {
+      border-top-left-radius: 3px;
+      border-top-right-radius: 3px; }
+    .list-group .list-group-item:last-child {
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px; }
 
 /*# sourceMappingURL=style.css.map */
