--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -30,3 +30,9 @@ h1,h2,h3,h4,h5,h6{
     line-height: 40px;
     color:#172B4D;
 }
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
