--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -4,6 +4,12 @@ $regular:normal;
 $bold:bold;
 $font-family : 'system-ui';
 
+// box-shadow
+$box-shadow: 0 0 0 0.1rem rgba(0,123,255,.25);
+$box-black: 0 2px 4px rgba(0, 0, 0, 0.1);
+$box-hover: 0 2px 4px rgba(0, 0, 0, 0.1), 0 4px 12px rgba(26, 26, 29, 0.08) !important;
+$card-hover: 0 6px 12px 0 rgba(0,0,0,.15);
+
 // colors
 $white: #fff;
 $border: #e4e4e4;
