--- a/public/sass/Components/_forms.scss
+++ b/public/sass/Components/_forms.scss
@@ -1,8 +1,9 @@
 .input{
     border: 1px solid #e0e0e0;
-    height: 32px;
+    height: 40px;
     border-radius: 3px;
     padding: 0 16px;
+    width: 100%;
     &:focus{
         outline: 0px;
     }
@@ -11,8 +12,12 @@
 .textarea{
     resize: none;
     border: 1px solid $border-color;
-    height: 40px;
+    height: 200px;
     padding: 8px 16px;
+    width:100%;
+    &:focus{
+        outline: 0px;
+    }
 }
 
 .checkbox{
@@ -27,7 +32,7 @@
         & + label:before{
             content: '\2714';
             border: 1px solid #e0e0e0;
-            padding: 0 5px; 
+            padding: 0 4px; 
             border-radius: 3px;
             color:transparent;
             margin-right: 6px;
@@ -40,28 +45,26 @@
 }
 
 .radio-button {
-    margin: 16px 0;
+    margin: 5px 0;
     display: inline-block;
     cursor: pointer;
     input {
         display: none;
         cursor: pointer;
         & + label {
-            line-height: 20px;
-            height: 20px;
-            padding-left: 20px;
+            line-height: 13px;
             display: inline-block;
             position: relative;
             cursor: pointer;
             &:not(:empty) {
-                padding-left: 20px + 8;
+                padding-left: 20px;
                 margin-right: 10px;
             }
             &:before,
             &:after {
                 content: '';
-                width: 20px;
-                height: 20px;
+                width: 15px;
+                height: 15px;
                 display: block;
                 border-radius: 50%;
                 left: 0;
@@ -105,126 +108,6 @@
                 }
             }
         }
-    }
-}
-
-.radio-with-icon{
-    position: relative;
-    display: inline-block;
-    &:last-child{
-        margin-right: 0px;
-    }
-    input{
-        margin: 0;
-        padding: 0;
-        -webkit-appearance: none;
-        &:focus{
-            box-shadow: unset;
-        }
-        // appearance:none;
-        &:active{
-            &+.drinkcard-cc{
-                opacity: .9;
-            }
-        }
-        &:checked{
-            &+.drinkcard-cc{
-                background: #3366ff;
-                color:#fff;
-                img{
-                    filter: invert(100%) sepia(0%) saturate(7473%) hue-rotate(320deg) brightness(104%) contrast(97%);
-                }
-            }
-        }
-    }
-    .drinkcard-cc{
-        position: relative;
-        display: inline-block;
-        margin-right: 10px;
-        height: 50px;
-        width: 85px;
-        margin-bottom: 10px;
-        border-radius: 3px;
-        border: 1px solid #EBECF0;
-        text-align: center;
-        font-size: 12px;
-        cursor: pointer;
-        img{
-            position: relative;
-            top: 5px;
-            height: 18px;
-        }
-        .title {
-            padding: 0 8px;
-            position: relative;
-            top: 5px;
-            display: block;
-        }
-    }
-    &::after{
-        display: table;
-        content: '';
-        clear: both;
-    }
-}
-
-.radio-with-icon-vertical, .checkBox-with-icon-vertical{
-    position: relative;
-    display: inline-block;
-    &:last-child{
-        margin-right: 0px;
-    }
-    input{
-        margin: 0;
-        padding: 0;
-        -webkit-appearance: none;
-        &:focus{
-            box-shadow: unset;
-        }
-        // appearance:none;
-        &:active{
-            &+.drinkcard-cc{
-                opacity: .9;
-            }
-        }
-        &:checked{
-            &+.drinkcard-cc{
-                background: #3366ff;
-                color:#fff;
-                img{
-                    filter: invert(100%) sepia(0%) saturate(7473%) hue-rotate(320deg) brightness(104%) contrast(97%);
-                }
-            }
-        }
-    }
-    .drinkcard-cc{
-        position: relative;
-        display: inline-block;
-        margin-right: 10px;
-        height: 32px;
-        padding: 0 16px;
-        margin-bottom: 10px;
-        border-radius: 3px;
-        border: 1px solid #EBECF0;
-        text-align: center;
-        font-size: 12px;
-        cursor: pointer;
-        img{
-            position: relative;
-            top: 3px;
-            height: 16px;
-            padding-right: 5px;
-        }
-        .title {
-            position: relative;
-            top: 5px;
-            display: inline-block;
-        }
-    }
-    &::after{
-        display: table;
-        content: '';
-        clear: both;
     }
 }
 
@@ -292,6 +175,137 @@
     }
 }
 
+.radio-with-icon{
+    position: relative;
+    display: inline-block;    
+    width: 33%;
+    text-align: center;
+    @media screen and (min-width:481px) {
+        width:auto;
+    }
+    &:last-child{
+        margin-right: 0px;
+    }
+    input{
+        margin: 0;
+        padding: 0;
+        -webkit-appearance: none;
+        &:focus{
+            box-shadow: unset;
+        }
+        // appearance:none;
+        &:active{
+            &+.drinkcard-cc{
+                opacity: .9;
+            }
+        }
+        &:checked{
+            &+.drinkcard-cc{
+                background: #3366ff;
+                color:#fff;
+                img{
+                    filter: invert(100%) sepia(0%) saturate(7473%) hue-rotate(320deg) brightness(104%) contrast(97%);
+                }
+            }
+        }
+    }
+    .drinkcard-cc{
+        position: relative;
+        display: inline-block;
+        margin-right: 10px;
+        height: 50px;
+        min-width: 90px;
+        margin-bottom: 10px;
+        border-radius: 3px;
+        border: 1px solid #EBECF0;
+        text-align: center;
+        font-size: 12px;
+        cursor: pointer;
+        img{
+            position: relative;
+            top: 5px;
+            height: 18px;
+        }
+        .title {
+            padding: 0 5px;
+            position: relative;
+            top: 5px;
+            display: block;
+        }
+    }
+    &::after{
+        display: table;
+        content: '';
+        clear: both;
+    }
+}
+
+.radio-with-icon-vertical, .checkBox-with-icon-vertical{
+    position: relative;
+    display: inline-block;    
+    width: 50%;
+    text-align: center;
+    @media screen and (min-width:481px) {
+        width:auto;
+    }
+    &:last-child{
+        margin-right: 0px;
+    }
+    input{
+        margin: 0;
+        padding: 0;
+        -webkit-appearance: none;
+        &:focus{
+            box-shadow: unset;
+        }
+        // appearance:none;
+        &:active{
+            &+.drinkcard-cc{
+                opacity: .9;
+            }
+        }
+        &:checked{
+            &+.drinkcard-cc{
+                background: #3366ff;
+                color:#fff;
+                img{
+                    filter: invert(100%) sepia(0%) saturate(7473%) hue-rotate(320deg) brightness(104%) contrast(97%);
+                }
+            }
+        }
+    }
+    .drinkcard-cc{
+        position: relative;
+        display: inline-block;
+        margin-right: 10px;
+        height: 32px;    
+        min-width: 135px;
+        padding: 0 10px;
+        margin-bottom: 10px;
+        border-radius: 3px;
+        border: 1px solid #EBECF0;
+        text-align: center;
+        font-size: 12px;
+        cursor: pointer;
+        img{
+            position: relative;
+            top: 3px;
+            height: 16px;
+            padding-right: 5px;
+        }
+        .title {
+            position: relative;
+            top: 5px;
+            display: inline-block;
+        }
+    }
+    &::after{
+        display: table;
+        content: '';
+        clear: both;
+    }
+}
+
 .radio-text{
     position: relative;
     display: inline-block;
@@ -324,7 +338,7 @@
     .drinkcard-cc{
         position: relative;
         display: inline-block;
-        margin-right: 5px;
+        margin-right: 15px;
         height: 30px;
         width: 30px;
         margin-bottom: 10px;
@@ -333,6 +347,10 @@
         text-align: center;
         font-size: 12px;
         cursor: pointer;
+        background: #EBECF0;
+        @media screen and (min-width:480px) {
+            margin-right:25px;
+        }
         img{
             position: relative;
             top: 5px;
@@ -340,7 +358,7 @@
         }
         span{
             position: relative;
-            top: 42%;
+            top: 48%;
             transform: translateY(-50%);
             display: block;
         }
