--- a/public/sass/Components/_spinner.scss
+++ b/public/sass/Components/_spinner.scss
@@ -1,11 +1,13 @@
-.spinner {
-    border: 4px solid #000000;
-    border-radius: 50%;
-    border-top: 4px solid transparent !important;
-    height: 20px;
-    width: 20px;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
+.spinner-text{
+    .spinner {
+        border: 4px solid #000000;
+        border-radius: 50%;
+        border-top: 4px solid transparent !important;
+        height: 20px;
+        width: 20px;
+        -webkit-animation: spin 2s linear infinite;
+        animation: spin 2s linear infinite;
+    }
 }
 
 @-webkit-keyframes spin {
