--- a/public/sass/Components/_tooltips.scss
+++ b/public/sass/Components/_tooltips.scss
@@ -1,38 +1,38 @@
-.tooltip{
+.tooltip-new{
     position: relative;
     display: inline-block;
-    transition: all ease-in-out 0.3s;
+    // transition: all ease-in-out 0.3s;
     cursor: pointer;
     &:hover{
         .tooltip-text{
             visibility: visible;
-            transition: all ease-in-out 0.3s;
+            opacity: 1;
+            // transition: all ease-in-out 0.3s;
         }
     }
     .tooltip-text {
         visibility: hidden;
-        max-width: 350px;
-        width: 100%;
-        text-align: center;
-        background-color: black;
+        width: 175px;
+        background-color: #555;
         color: #fff;
         text-align: center;
         border-radius: 6px;
         padding: 5px 0;
         position: absolute;
         z-index: 1;
-        top: 150%;
-        left: 50%;
-        margin-left: -50px;
+        top: 0;
+        left: 40px;
+        opacity: 0;
+        transition:opacity .3s;
         &::after {
             content: "";
             position: absolute;
-            bottom: 100%;
-            left: 50%;
-            margin-left: -5px;
+            top: 7%;
+            right: 100%;
+            // margin-top: -5px;
             border-width: 5px;
             border-style: solid;
-            border-color: transparent transparent black transparent;
+            border-color: transparent #555 transparent transparent;
         }
         span{
             position: relative;
